--- a/hospital/index.html
+++ b/hospital/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>병원</title>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/content.css">
@@ -14,8 +14,13 @@
     <div class="wrap">
 
         <div class="header">
-            <div class="header-top">무슨무슨병원</div>
+            <div class="header-top">
+                
+                무슨무슨병원
+            </div>
+
             <div class="header-bottom">
+                <div class="inner">
                     <ul>
                         <li><a>진료과목</a></li>
                         <li><a>의료진소개</a></li>
@@ -27,12 +32,19 @@
                         <li><a>오시는길</a></li>
                         <li><a>비급여고지</a></li>
                     </ul>
+                </div>
             </div>
         </div>
 
         <div class="content">
-            <div class="main1" id="main1"></div>
-            <div class="main2" id="main2"></div>
+            
+            <div class="main1" id="main1">
+
+            </div>
+
+            <div class="main2" id="main2">
+
+            </div>
         </div>
 
 
