--- a/hospital/index.html
+++ b/hospital/index.html
@@ -19,8 +19,8 @@
     <!-- slick -->
 </head>
 <body>
-    <!-- laptop git -->
-    
+    <!-- laptop git  ss-->
+
     <div class="wrap">
      <!-- header start -->
         <div class="header">
