--- a/hospital/동해튼튼마취통증의학과의원.html
+++ b/hospital/동해튼튼마취통증의학과의원.html
@@ -40,7 +40,8 @@
 <link rel="stylesheet" href="./동해튼튼마취통증의학과의원_files/aos.css">
 
 
-<link rel="stylesheet" href="./동해튼튼마취통증의학과의원_files/roughmapLander.css"><script src="./동해튼튼마취통증의학과의원_files/v3.js.다운로드"></script><script charset="utf-8" src="./동해튼튼마취통증의학과의원_files/v3.js(1).다운로드"></script></head>
+<link rel="stylesheet" href="./동해튼튼마취통증의학과의원_files/roughmapLander.css">
+<script src="./동해튼튼마취통증의학과의원_files/v3.js.다운로드"></script><script charset="utf-8" src="./동해튼튼마취통증의학과의원_files/v3.js(1).다운로드"></script></head>
 
 <body data-aos-easing="ease-out-quad" data-aos-duration="600" data-aos-delay="100">
 
